--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <section class="profile">
-        <img src="https://placehold.co/400x400" alt="Professional portrait of developer with smiling expression" class="profile-pic">
+        <img src="https://avatars.githubusercontent.com/u/179506691?v=4&size=64" alt="Professional portrait of developer with smiling expression" class="profile-pic">
         <div class="about">
             <h2>About Me</h2>
             <p>Hi, I'm a passionate developer who loves building useful applications, contributing to open source, and sharing knowledge with the community. My projects span various technologies including JavaScript, Python, and more.</p>
@@ -26,7 +26,7 @@
     </section>
 
     <section>
-        <h2>Featured Projects</h2>
+        <h2>Projects</h2>
         <div class="projects-grid">
             <div class="project-card">
                 <h3>Project One</h3>
