--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </section>
 
     <section>
+        <!---
         <h2>Projects</h2>
         <div class="projects-grid">
             <div class="project-card">
@@ -106,3 +107,5 @@
     </script>
 </body>
 </html>
+-->
+<marquee><h4>There are no projects yet published</h4></marquee>
