--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Projects</title>
+    <title>Projects By Aryan</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub Projects</h1>
+        <h1>Welcome</h1>
         <p>Below you'll find a collection of my work and contributions to open source</p>
     </header>
 
     <section class="profile">
         <img src="https://avatars.githubusercontent.com/u/179506691?v=4&size=64" alt="Professional portrait of developer with smiling expression" class="profile-pic">
         <div class="about">
-            <h2>About Me</h2>
-            <p>Hi, I'm a passionate developer who loves building useful applications, contributing to open source, and sharing knowledge with the community. My projects span various technologies including JavaScript, Python, and more.</p>
+            <h2>Aryan Thakur</h2>
+            <p>Hi, I'm fresser at CGC Jhanjeri who loves building useful applications, contributing to open source, and sharing knowledge with the community. My projects span various technologies including JavaScript, Python, and more.</p>
             <div class="social-links">
-                <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-                <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
-                <a href="https://twitter.com/yourusername" target="_blank">Twitter</a>
+                <a href="https://github.com/aryanrangra100" target="_blank">GitHub</a>
+                <a href="https://linkedin.com/in/aryanrangra100" target="_blank">LinkedIn</a>
+                <a href="https://twitter.com/aryanrangra100" target="_blank">Twitter</a>
             </div>
         </div>
     </section>
